Fix icon and footer alignment format

--- a/source/css/index.styl
+++ b/source/css/index.styl
@@ -2,6 +2,10 @@
     margin-top: 2rem;
 }
 
+.post-card i {
+  vertical-align: middle;
+}
+
 .card-img{
     display: inline-block;
     max-width: 100%;
@@ -15,3 +19,4 @@
     display: none;
   }
 }
+
