--- a/source/css/post.styl
+++ b/source/css/post.styl
@@ -8,12 +8,12 @@
 }
 
 .post_content h1,h2,h3,h4,h5,h6{
-    font-weight:600;
+    font-weight: 600;
 }
 
 
 .toc{
-    font-size:14px;
+    font-size: 14px;
 }
 
 .toc a{
@@ -21,6 +21,7 @@
 }
 
 .toc a:hover{
-    font-weight:600;
+    font-weight: 600;
+    color: #89229b;
 }
 
